@@ -1,2 +1,0 @@
-This is the Early Access Release of the Gnome Accessibility Project's
-Assistive Technology Service Provider Interface.
