@@ -1,13 +1,0 @@
-@comment $NetBSD: PLIST,v 1.2 2009/06/14 17:49:04 joerg Exp $
-${PYSITELIB}/pyatspi/__init__.py
-${PYSITELIB}/pyatspi/__init__.pyc
-${PYSITELIB}/pyatspi/accessible.py
-${PYSITELIB}/pyatspi/accessible.pyc
-${PYSITELIB}/pyatspi/constants.py
-${PYSITELIB}/pyatspi/constants.pyc
-${PYSITELIB}/pyatspi/event.py
-${PYSITELIB}/pyatspi/event.pyc
-${PYSITELIB}/pyatspi/registry.py
-${PYSITELIB}/pyatspi/registry.pyc
-${PYSITELIB}/pyatspi/utils.py
-${PYSITELIB}/pyatspi/utils.pyc
